Fixed button overflowing from check-in component
Removed display: flex, which doesn't let input and button flow to next line

--- a/src/components/EventCheckIn/style.less
+++ b/src/components/EventCheckIn/style.less
@@ -19,7 +19,6 @@
   }
 
   .inputbox {
-    display: flex;
 
     * {
       border-radius: 10px;
@@ -30,6 +29,7 @@
       color: @blue-3;
       border: none;
       margin-right: 20px;
+      margin-bottom:5px;
     }
 
     .submit {
